--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "core-js": "^3.20.3",
     "dayjs": "^1.10.7",
+    "gridjs-react": "^5.0.2",
     "kalend": "^0.7.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
