--- a/package.json
+++ b/package.json
@@ -3,24 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@mantine/core": "^3.6.3",
-    "@mantine/dates": "^3.6.3",
-    "@mantine/hooks": "^3.6.3",
-    "@mantine/modals": "^3.6.3",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
+    "@mantine/core": "^3.6.9",
+    "@mantine/dates": "^3.6.9",
+    "@mantine/hooks": "^3.6.9",
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "core-js": "^3.20.3",
-    "dayjs": "^1.10.7",
-    "gridjs-react": "^5.0.2",
-    "kalend": "^0.7.5",
+    "install": "^0.13.0",
+    "kalend": "^0.9.5",
+    "npm": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "recharts": "^2.1.8",
-    "web-vitals": "^2.1.3"
+    "recharts": "^2.1.9",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
