--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@mantine/core": "^3.6.9",
     "@mantine/dates": "^3.6.9",
     "@mantine/hooks": "^3.6.9",
+    "@mantine/notifications": "^3.6.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
