--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "dependencies": {
     "@mantine/core": "^3.6.9",
     "@mantine/dates": "^3.6.9",
+    "@mantine/dropzone": "^3.6.11",
     "@mantine/hooks": "^3.6.9",
     "@mantine/notifications": "^3.6.9",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "fecha": "^4.2.1",
     "install": "^0.13.0",
     "kalend": "^0.9.5",
     "npm": "^8.5.1",
